Hero and announce block jumping fix

--- a/client/src/assets/css/main.styl
+++ b/client/src/assets/css/main.styl
@@ -142,7 +142,6 @@ h1,h2,h3,h4,h5,h5
 .ca-main
   //background-image: url('https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/HFFjMuKnit5srlmq/asian-candles-in-religious-ceremony-dolly-right-shot_r9gtwvfrlg_thumbnail-full01.png')
   //background-color: rgb(5, 27, 28)
-  background-color rgba($c_primary, 0.7)
 
 .bg-hero
   min-height 416px
@@ -205,6 +204,8 @@ h1,h2,h3,h4,h5,h5
   position: relative;
   display: block;
   margin-top: 15px;
+  min-height: 120px;
+  background: #f7f7f7;
 }
 
 
